chagned api to https

--- a/default.conf
+++ b/default.conf
@@ -7,6 +7,6 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://cukrarna-api.captain.hajas.cz/;
+        proxy_pass https://cukrarna-api.captain.hajas.cz/;
     }
 }
